# board_game_reinforcement_learning

./: .gitignore  pyproject.toml  setup.cfg  setup.py
bg_rl/agent/: __init__.py  agent.py  mcts_agent.py  random_agent.py
bg_rl/game/: __init__.py  action.py  decision.py  game.py  player.py  turn.py
bg_rl/mcts/: mcts.py
bg_rl/utilities/: logging.py  timing.py
demos/: connect2.py  connect4.py  tic_tac_toe.py
