[metadata]
name = bg_rl
version = attr: bg_rl.__version__
description = My package description
long_description = file: README.md
keywords = one, two
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    
[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    networkx
    numpy
    pydot
    scipy
python_requires = >=3.8
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1

[aliases]
test=pytest

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s